--- a/setup.cfg
+++ b/setup.cfg
@@ -11,3 +11,9 @@ license_files = LICENSE
 # bdist_wheel from trying to make a universal wheel. For more see:
 # https://packaging.python.org/guides/distributing-packages-using-setuptools/#wheels
 # universal=0
+
+# ROS2 configuration
+[develop]
+script_dir=$base/lib/nanosaur_base
+[install]
+install_scripts=$base/lib/nanosaur_base
