--- a/setup.cfg
+++ b/setup.cfg
@@ -14,6 +14,6 @@ license_files = LICENSE
 
 # ROS2 configuration
 [develop]
-script_dir=$base/lib/nanosaur_base
+script_dir=$base/lib/ros_system_manager
 [install]
-install_scripts=$base/lib/nanosaur_base
+install_scripts=$base/lib/ros_system_manager
