--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -25,11 +25,13 @@ jobs:
         sudo -H python3 -m pip install --upgrade pip
         # Upgrade documentation
         sudo -H python3 -m pip install --upgrade pydocstyle
+        # install colcon
+        sudo apt-get install python3-colcon-common-extensions
     - name: Display Python version
       run: python3 -c "import sys; print(sys.version)"
     - name: Colcon test
       run: |
-        echo run colcon test
+        colcon test
 
   deploy:
     name: Deploy on PIP
