--- a/setup.cfg
+++ b/setup.cfg
@@ -17,3 +17,8 @@ license_files = LICENSE
 script_dir=$base/lib/ros2_system_manager
 [install]
 install_scripts=$base/lib/ros2_system_manager
+
+# Configure flake
+[flake8]
+exclude = .git, __pycache__, .venv
+max-line-length = 100
