--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,7 @@
-# This file is part of the jetson_stats package (https://github.com/rbonghi/jetson_stats or http://rnext.it).
-# Copyright (c) 2019 Raffaello Bonghi.
+# GNU AFFERO GENERAL PUBLIC LICENSE
+#
+# This file is part of the jetson_stats package (https://github.com/rbonghi/ros2_system_manager or http://rnext.it).
+# Copyright (c) 2021 Raffaello Bonghi.
 #
 # This program is free software: you can redistribute it and/or modify
 # it under the terms of the GNU Affero General Public License as published by
