--- a/package.xml
+++ b/package.xml
@@ -1,22 +1,22 @@
 <?xml version="1.0"?>
 <!--
-GNU AFFERO GENERAL PUBLIC LICENSE
+GNU General Public License 3.0
 
-This file is part of the jetson_stats package (https://github.com/rbonghi/ros2_system_manager or http://rnext.it).
+This file is part of the ros2_system_manager package (https://github.com/rbonghi/ros2_system_manager or http://rnext.it).
 Copyright (c) 2021 Raffaello Bonghi.
 
 This program is free software: you can redistribute it and/or modify
-it under the terms of the GNU Affero General Public License as published by
+it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.
 
 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-GNU Affero General Public License for more details.
+GNU General Public License for more details.
 
-You should have received a copy of the GNU Affero General Public License
-along with this program. If not, see <http://www.gnu.org/licenses/>.
+You should have received a copy of the GNU General Public License
+along with this program. If not, see <https://www.gnu.org/licenses/>.
 -->
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
