--- a/setup.cfg
+++ b/setup.cfg
@@ -21,5 +21,6 @@ install_scripts=$base/lib/ros2_system_manager
 # Configure flake
 # https://flake8.pycqa.org/en/latest/user/configuration.html
 [flake8]
+ignore = B902
 exclude = .git, __pycache__, .venv
 max-line-length = 120
