--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -49,8 +49,8 @@ jobs:
           python-version: '3.x'
       - name: Install dependencies
         run: |
-          sudo -H python -m pip install --upgrade pip
-          sudo -H pip install setuptools wheel twine
+          sudo -H python3 -m pip install --upgrade pip
+          sudo -H pip3 install setuptools wheel twine
       - name: Build and publish
         env:
           TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
