--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -56,5 +56,5 @@ jobs:
           TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
           TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
         run: |
-          sudo python setup.py sdist
-          twine upload dist/*
+          sudo python3 setup.py sdist
+          python3 -m twine upload dist/*
