--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -48,6 +48,7 @@ jobs:
           python-version: '3.x'
       - name: Install dependencies
         run: |
+          sudo apt-get install twine -y
           sudo -H python3 -m pip install --upgrade pip
           sudo -H pip3 install setuptools wheel twine
       - uses: actions/checkout@v2
@@ -57,4 +58,4 @@ jobs:
           TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
         run: |
           sudo python3 setup.py sdist
-          python3 -m twine upload dist/*
+          twine upload dist/*
