--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -36,6 +36,47 @@ jobs:
           target-ros2-distro: foxy
           skip-tests: true
 
+  # https://github.com/docker/build-push-action/issues/225
+  docker:
+    name: "Build Docker image develop"
+    runs-on: ubuntu-latest #self-hosted
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v2.3.4
+
+    # https://github.com/docker/build-push-action/blob/master/docs/advanced/tags-labels.md
+    - name: Docker meta
+      id: meta
+      uses: crazy-max/ghaction-docker-meta@v3.5.0
+      with:
+        images: nanosaur/webgui
+        # generate Docker tags based on the following events/attributes
+        tags: |
+          type=ref,event=branch
+          type=semver,pattern={{version}}
+          type=ref,event=tag
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v1
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
+
+    - name: Login to DockerHub
+      if: github.event_name != 'pull_request'
+      uses: docker/login-action@v1.10.0 
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+    - name: Build and push
+      id: docker_build
+      uses: docker/build-push-action@v2.7.0
+      with:
+        push: ${{ github.event_name != 'pull_request' }}
+        tags: ${{ steps.meta.outputs.tags }}
+        labels: ${{ steps.meta.outputs.labels }}
+        platforms: linux/amd64,linux/arm64
+
   deploy:
     name: Deploy on PIP
     needs: [build]
