--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -8,7 +8,7 @@ on: [push, pull_request]
 # https://help.github.com/en/actions/language-and-framework-guides/using-python-with-github-actions
 
 jobs:
-  build:
+  test:
     name: Test package ROS2
     runs-on: ubuntu-latest
     steps:
@@ -39,6 +39,7 @@ jobs:
   # https://github.com/docker/build-push-action/issues/225
   docker:
     name: "Build Docker image develop"
+    needs: [test]
     runs-on: ubuntu-latest #self-hosted
     steps:
     - name: Checkout
@@ -79,7 +80,7 @@ jobs:
 
   deploy:
     name: Deploy on PIP
-    needs: [build]
+    needs: [docker]
     if: startsWith(github.ref, 'refs/tags/')
     runs-on: ubuntu-latest
     steps:
