--- a/package.xml
+++ b/package.xml
@@ -40,6 +40,7 @@ along with this program. If not, see <https://www.gnu.org/licenses/>.
    <exec_depend>rclpy</exec_depend>
    <exec_depend>std_srvs</exec_depend>
    <exec_depend>diagnostic_msgs</exec_depend>
+   <exec_depend>joy</exec_depend>
 
    <export>
       <build_type>ament_python</build_type>
