--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -80,7 +80,7 @@ jobs:
 
   deploy:
     name: Deploy on PIP
-    needs: [docker]
+    needs: [test]
     if: startsWith(github.ref, 'refs/tags/')
     runs-on: ubuntu-latest
     steps:
